# locci-vps

./: .env.sample  .gitignore  .http  DEBUG.md  Dockerfile  Makefile  NOTES.md  README.md  SETUP.md  compose.yaml  docker-entrypoint.sh  get-rootfs-and-kernel-image.sh  go.mod  go.sum  main.go  net-tap.sh
cli/: Cargo.toml
cli/src/: main.rs
scripts/: README.md  copy-debug.sh  create-base-image.sh  firecracker-vps.service  integration-tests.sh
web/: package.json  pnpm-lock.yaml
web/.svelte-kit/: ambient.d.ts
web/src/routes/: +layout.svelte  +page.svelte  Header.svelte
