[package]
name = "fc-vps-cli"
version = "0.1.0"
edition = "2021"
description = "Firecracker VPS Management CLI"
authors = ["MikeTeddyOmondi <me@mt0.dev>"]
license = "MIT"
repository = "https://github.com/MikeTeddyOmondi/fc-vps-cli"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.15"
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.8"

[[bin]]
name = "fc-vps"
path = "src/main.rs"

